changing labels and description rendering in app

--- a/fiftyone.yml
+++ b/fiftyone.yml
@@ -1,4 +1,4 @@
-name: "@harpreetsahota/aim_embeddings"
+name: "@harpreetsahota/aimv2_embeddings"
 description: A collection of example operators showing how to use the operator type system to build custom FiftyOne operations
 version: 1.0.0
 fiftyone:
@@ -6,4 +6,4 @@ fiftyone:
 url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/operator-examples
 license: Apache 2.0
 operators:
-  - apple_aim_embeddings
+  - aimv2_embeddings
