--- a/fiftyone.yml
+++ b/fiftyone.yml
@@ -1,9 +1,9 @@
 name: "@harpreetsahota/aimv2_embeddings"
-description: A collection of example operators showing how to use the operator type system to build custom FiftyOne operations
+description: Compute embeddings using AIMv2 Models
 version: 1.0.0
 fiftyone:
   version: "*"
-url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/operator-examples
+url: https://github.com/harpreetsahota204/aim-embeddings-plugin
 license: Apache 2.0
 operators:
   - compute_aimv2_embeddings
